<resources>
    <string name="app_name">Weather App</string>
    <string name="retry">Retry</string>
    <string name="something_went_wrong_at_our_end">Something went wrong at our end!</string>
    <string name="hourly_forecast">Hourly Forecast</string>
    <string name="details">Details</string>
    <string name="_4_days_forecast">4 Days Forecast</string>
    <string name="select_city">Select City</string>
    <string name="menu">Menu</string>

    <string name="autocomplete_hint">Enter city name</string>
    <string name="selected_place">Last Selected Place:</string>
    <string name="clear_text">Clear Text</string>
    <string name="add">Add</string>
    <string name="your_added_city">Your Added City</string>

</resources>
