<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_app_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.percent.PercentRelativeLayout
                android:id="@+id/rlt_layout_current"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/white">

                <TextView
                    android:id="@+id/txt_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_marginStartPercent="5%"
                    android:textSize="25sp"/>

                <TextView
                    android:id="@+id/txt_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_city"
                    app:layout_marginStartPercent="5%"
                    app:layout_marginTopPercent="2%"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/txt_weather_condition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    app:layout_marginStartPercent="5%"
                    app:layout_marginTopPercent="5%"
                    android:layout_below="@+id/txt_date"/>

                <ImageView
                    android:id="@+id/img_weather_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    app:layout_marginEndPercent="10%"
                    app:layout_marginTopPercent="2%"/>


                <TextView
                    android:id="@+id/txt_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    app:layout_marginStartPercent="5%"
                    app:layout_marginBottomPercent="10%"
                    android:textSize="40sp"/>

            </android.support.percent.PercentRelativeLayout>

            <RelativeLayout
                android:id="@+id/rlt_layout_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_below="@+id/rlt_layout_current">

            <TextView
                android:id="@+id/txt_hourly_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hourly_forecast"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="10dp"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_weather_hourly_items"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_hourly_header"/>

            <TextView
                android:id="@+id/txt_details_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/details"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="10dp"
                android:layout_below="@+id/rv_weather_hourly_items"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_weather_items"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_details_header"/>
            <TextView
                android:id="@+id/txt_forecast_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_4_days_forecast"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="10dp"
                android:layout_below="@+id/rv_weather_items"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_forecast_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_forecast_header"/>
            </RelativeLayout>
        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>